Changing the isValidPassword check if the password is blank